Cambio de fichero de automatizacion #17
Se ha cambiado el fichero para la automatizacion de tareas a makefile y ahora la orden es make check

--- a/iv.yaml
+++ b/iv.yaml
@@ -1,5 +1,5 @@
 lenguaje: TypeScript 
 entidad: src/candidato.ts
 automatizar:
-  fichero: deno.json
-  orden: deno task
+  fichero: makefile
+  orden: make check
