Cambio en iv.yaml #17
Se ha cambiado el fichero para automatizar como la orden

--- a/iv.yaml
+++ b/iv.yaml
@@ -1,5 +1,5 @@
 lenguaje: TypeScript 
 entidad: src/candidato.ts
 automatizar:
-  fichero: makefile
-  orden: make check
+  fichero: package.json
+  orden: npm run
