--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
     "name": "easyselect",
     "version": "0.0.1",
+    "description": "Proyecto de la asignatura IV, EasySelect",
     "dependencies": {
+        "typescript": "^5.2.2"
+    },
+    "devDependencies": {
+        "@types/jest": "^29.5.7",
+        "jest": "^29.7.0",
+        "ts-jest": "^29.1.1"
     },
     "scripts": {
         "check": "tsc --noEmit src/oferta.ts src/gestorCandidato.ts",
+        "test": "jest",
         "build": "tsc",
         "start": "node dist/oferta.js"
     }
