--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,5 +5,6 @@
       "strict": true,
       "target": "es6"
     },
-    "include": ["src"]
+    "include": ["src"],
+    "exclude": ["node_modules"]
   }
