--- a/package.json
+++ b/package.json
@@ -6,13 +6,11 @@
         "typescript": "^5.2.2"
     },
     "devDependencies": {
-        "@types/jest": "^29.5.7",
-        "jest": "^29.7.0",
-        "ts-jest": "^29.1.1"
+        "vitest": "^0.34.6"
     },
     "scripts": {
         "check": "tsc --noEmit src/oferta.ts src/gestorCandidato.ts",
-        "test": "jest",
+        "test": "vitest",
         "build": "tsc",
         "start": "node dist/oferta.js"
     }
