Corregido test bucle closes #32
Para solucionar que en docker no este esperando todo el rato se ha cambiado la orden y se indica ahora la opción --no-watch para que cuando pruebe el test termine esa orden y no siga esperando

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     },
     "scripts": {
         "check": "tsc --noEmit src/oferta.ts src/gestorCandidato.ts",
-        "test": "vitest",
+        "test": "vitest --no-watch",
         "build": "tsc",
         "start": "node dist/oferta.js"
     }
