--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
         "typescript": "^5.2.2"
     },
     "devDependencies": {
-        "vitest": "^0.34.6"
+        "jest": "^29.7.0",
+        "@types/jest": "^29.5.8",
+        "ts-jest": "^29.1.1"
     },
     "scripts": {
         "check": "tsc --noEmit src/oferta.ts src/gestorCandidato.ts",
-        "test": "vitest --no-watch",
+        "test": "jest",
         "build": "tsc",
         "start": "node dist/oferta.js"
     }
