--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "version": "0.0.1",
     "description": "Proyecto de la asignatura IV, EasySelect",
     "dependencies": {
-        "typescript": "^5.2.2"
     },
     "devDependencies": {
+        "typescript": "^5.2.2",
         "jest": "^29.7.0",
         "@types/jest": "^29.5.8",
         "ts-jest": "^29.1.1"
