--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,14 @@
 language: node_js
 
+node_js:
+  - 18.12.0
+
 services:
   - docker
 
 before_script:
   - docker pull manuelvico0102/easyselect:latest
 
-workflows:
-  unit-test:
-    script:
-      - docker run -it manuelvico0102/easyselect:latest npm ci
-      - docker run -it manuelvico0102/easyselect:latest npm test
+script:
+  - docker build -t manuelvico0102/easyselect .
+  - docker run  -tv `pwd`:/app/test manuelvico0102/easyselect
