Añadido construccion configuracion travis #37
Se ha añadido la instalacion de dependencias

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language:
 
 install:
   - docker pull manuelvico0102/easyselect
-  - docker images
 
 script: 
-  - docker run -t -v  $TRAVIS_BUILD_DIR:/test manuelvico0102/easyselect
+  - docker run -t -v $TRAVIS_BUILD_DIR:/test manuelvico0102/easyselect npm ci
+  - docker run -t -v  $TRAVIS_BUILD_DIR:/test manuelvico0102/easyselect npm run test
