Actualizado iv.yaml closes #39
Se ha actualizado el archivo con la informacion necesaria para el objetivo 6

--- a/iv.yaml
+++ b/iv.yaml
@@ -4,3 +4,7 @@ automatizar:
   fichero: package.json
   orden: npm run
 test: test/test_extraccion.test.ts
+CI: 
+  - .github/workflows/node.yml
+  - .travis.yml
+  
