--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -7,12 +7,16 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    strategy:
+      matrix:
+          node-version: [14.x, 16.x, 18.x]
+    
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18.12.0
+          node-version: ${{ matrix.node-version }}
 
       - run: npm ci
       - run: npm test
