--- a/.github/workflows/node.yml
+++ b/.github/workflows/node.yml
@@ -9,7 +9,7 @@ jobs:
 
     strategy:
       matrix:
-          node-version: [16.x, 18.x, 20.x]
+          node-version: [[lts/-1, lts/*, node]]
     
     steps:
       - uses: actions/checkout@v4
