--- a/package.json
+++ b/package.json
@@ -5,10 +5,14 @@
     "dependencies": {
     },
     "devDependencies": {
-        "typescript": "^5.2.2",
-        "jest": "^29.7.0",
         "@types/jest": "^29.5.8",
-        "ts-jest": "^29.1.1"
+        "@types/pino": "^7.0.5",
+        "jest": "^29.7.0",
+        "ts-jest": "^29.1.1",
+        "typescript": "^5.2.2",
+        "pino": "^8.17.1",
+        "pino-pretty": "^10.3.0",
+        "dotenv": "^16.3.1"
     },
     "scripts": {
         "check": "tsc --noEmit src/oferta.ts src/gestorCandidato.ts",
