Actualizado iv.yaml #49
Se ha actualizado el iv.yaml para indicar el fichero de configuracion

--- a/iv.yaml
+++ b/iv.yaml
@@ -7,4 +7,6 @@ test: test/test_extraccion.test.ts
 CI: 
   - .github/workflows/node.yml
   - .travis.yml
+configuracion: src/utils/configuracion.ts
+```
   
