Añadido LOG_LEVEL y LOG_FILE_PATH #47
Se ha añadido lo necesario para pasar los test ci

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     },
     "scripts": {
         "check": "tsc --noEmit src/oferta.ts src/gestorCandidato.ts",
-        "test": "jest",
+        "test": "LOG_LEVEL=debug LOG_FILE_PATH=./logs.log jest",
         "build": "tsc",
         "start": "node dist/oferta.js"
     }
